--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,24 @@
 	max-width: 90%;
 	margin: auto;
 }
+
+.image-text {
+	position: absolute;
+	right: 10%;
+	top: 25%;
+}
+
+.main-list {
+	position: relative;
+}
+
+ul {
+	list-style-type: none;
+
+}
+
+.absolute-class {
+	position: absolute;
+	right: 50%;
+	top: 50%;
+}
