--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/*body {
+	font-family: 'Maven Pro', sans-serif;
+	background:#ffffff;
+	font-size: 100%;
+}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{
+	font:inherit;}
+
+*/
+
 @media (min-width: 320px) {
   nav {
   	max-width: 90%;
@@ -25,8 +35,158 @@ ul {
 
 }
 
-.absolute-class {
+/*.absolute-class {
 	position: absolute;
 	right: 50%;
 	top: 50%;
+}*/
+
+.hover-state:hover {
+background-color: #57C5A0;
+opacity: 0.5;
+zoom:110%;
+}
+/*<!--#region Bullet Navigator Skin Begin -->
+            <!-- Help: https://www.jssor.com/development/slider-with-bullet-navigator.html -->*/
+
+.jssorb031 {position:absolute;}
+.jssorb031 .i {position:absolute;cursor:pointer;}
+.jssorb031 .i .b {fill:#000;fill-opacity:0.5;stroke:#fff;stroke-width:1200;stroke-miterlimit:10;stroke-opacity:0.3;}
+.jssorb031 .i:hover .b {fill:#fff;fill-opacity:.7;stroke:#000;stroke-opacity:.5;}
+.jssorb031 .iav .b {fill:#fff;stroke:#000;fill-opacity:1;}
+.jssorb031 .i.idn {opacity:.3;}
+
+/*            <!--#region Arrow Navigator Skin Begin -->
+            <!-- Help: https://www.jssor.com/development/slider-with-arrow-navigator.html -->*/
+
+.jssora051 {display:block;position:absolute;cursor:pointer;}
+.jssora051 .a {fill:none;stroke:#fff;stroke-width:360;stroke-miterlimit:10;}
+.jssora051:hover {opacity:.8;}
+.jssora051.jssora051dn {opacity:.5;}
+.jssora051.jssora051ds {opacity:.3;pointer-events:none;}
+
+	 /* jssor slider loading skin spin css */
+.jssorl-009-spin img {
+	animation-name: jssorl-009-spin;
+	animation-duration: 1.6s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes jssorl-009-spin {
+	from {
+	    transform: rotate(0deg);
+	}
+	to {
+	    transform: rotate(360deg);
+	}
+}
+
+.shoe {
+	min-width: 300px;
+	position: relative;
+}
+
+.nav-item {
+	min-height: 60px;
+	line-height: 60px;
+	min-width: 100px;
+	white-space: nowrap;
+	text-align: center;
+	
+}
+
+.center-text {
+  height: 100px;
+  line-height: 100px;
+  white-space: nowrap;
+}
+
+a:hover {
+	text-decoration: none!important;}
+
+a {
+	color: #57C5A0!important;}
+
+
+
+#fooseshoes-color {
+	color: #57C5A0;
+}
+
+#fooseshoes-bg {
+	background-color: #57C5A0;
+}
+
+:active {
+	color: #57C5A0;
+}
+
+ #center-badge {
+ 	background-color: rgb(0,0,0,0.5);
+ 	position: absolute;
+	right: 100px;
+	top: 50%;
+	color: white;
+ }
+
+ #center-badge:hover {
+ 	color: #57C5A0;
+ }
+
+#three-shoes {
+	min-height: 300px;
+	line-height: 300px;
+  	white-space: nowrap;
+}
+
+#product-image {
+	max-width: 200px;
+	height: auto;
+}
+
+#onSale-badge {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+
+}
+
+#price-badge {
+	position: absolute;
+	left: 5px;
+	bottom: 0px;
+	background-color: #57C5A0;
+}
+
+#main-heading {
+	min-height: 100px;
+}
+
+#blog-news {
+	margin-left: 10px;
+	padding: 2%;
+}
+
+.bg-foosegreen {
+	background-color: #57C5A0;
+}
+
+#bn-container {
+	margin-bottom: 5%;
+}
+
+#apr1 {
+	margin-right: 2%;
+	margin-bottom: 1%;
+}
+
+#social-icon {
+	width: 30px;
+	height: auto;
+	text-align: center;
+}
+
+#social-icon:hover {
+	color: #57C5A0;
 }
